# deepiri-cascade

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: cascade.yml  ci.yml  codeql.yml  deploy.yml  dispatch.yml  monitor-push.yml  monitor.yml  reusable.yml
docs/: GITHUB_APP.md  IT_SECRETS_RUNBOOK.md  SECRETS.md
src/: webhook_handler.py
src/deepiri_cascade/: __init__.py  auto_detect.py  cascade.py  ci_logging.py  cli.py  discovery.py  github_auth.py  manifest.py  release.py  triggers.py
src/deepiri_cascade.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/deepiri_cascade/parser/: __init__.py  gitmodules.py  npm.py  poetry.py
tests/: test_cascade.py  test_ci_logging.py  test_discovery.py  test_parsers.py  test_triggers.py
worker/: index.js  wrangler.toml
